// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default SettingsScreen renders in dark mode 1`] = `
<RCTSafeAreaView
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#000000",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#000000",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
        "paddingHorizontal": 4,
        "width": 750,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#000000",
          "borderRadius": 40,
          "flexDirection": "row",
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "width": 40,
        }
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#000000",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "material",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "borderBottomColor": "#7E7E7E",
        "borderBottomWidth": 1,
        "justifyContent": "center",
        "paddingVertical": 16,
        "width": "100%",
      }
    }
  >
    <Image
      source={
        {
          "uri": undefined,
        }
      }
      style={
        {
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        }
      }
    />
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 24,
        }
      }
    >
       
    </Text>
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 12,
        }
      }
    />
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#000000",
        "borderBottomColor": "#7E7E7E",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingHorizontal": 4,
        "width": 750,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "material",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
          }
        }
      >
        Account
      </Text>
    </View>
    <View>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 28,
            },
            undefined,
            {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#000000",
        "borderBottomColor": "#7E7E7E",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingHorizontal": 4,
        "width": 750,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "material",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
          }
        }
      >
        Notifications
      </Text>
    </View>
    <View>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 28,
            },
            undefined,
            {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#000000",
        "borderBottomColor": "#7E7E7E",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingHorizontal": 4,
        "width": 750,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "material",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
          }
        }
      >
        Privacy Policy
      </Text>
    </View>
    <View>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 28,
            },
            undefined,
            {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#000000",
        "borderBottomColor": "#7E7E7E",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingHorizontal": 4,
        "width": 750,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "material",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
          }
        }
      >
        Ratings
      </Text>
    </View>
    <View>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 28,
            },
            undefined,
            {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "System",
        "fontSize": 12,
        "marginTop": 8,
      }
    }
  >
    Buttons above for testing
  </Text>
</RCTSafeAreaView>
`;

exports[`Default SettingsScreen renders in light mode 1`] = `
<RCTSafeAreaView
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
        "paddingHorizontal": 4,
        "width": 750,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 40,
          "flexDirection": "row",
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "width": 40,
        }
      }
    >
      <View>
        <Text />
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "borderBottomColor": "#7E7E7E",
        "borderBottomWidth": 1,
        "justifyContent": "center",
        "paddingVertical": 16,
        "width": "100%",
      }
    }
  >
    <Image
      source={
        {
          "uri": undefined,
        }
      }
      style={
        {
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        }
      }
    />
    <Text
      style={
        {
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 24,
        }
      }
    >
       
    </Text>
    <Text
      style={
        {
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 12,
        }
      }
    />
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderBottomColor": "#7E7E7E",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingHorizontal": 4,
        "width": 750,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View>
        <Text />
      </View>
      <Text
        style={
          {
            "color": "#000000",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
          }
        }
      >
        Account
      </Text>
    </View>
    <View>
      <Text />
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderBottomColor": "#7E7E7E",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingHorizontal": 4,
        "width": 750,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View>
        <Text />
      </View>
      <Text
        style={
          {
            "color": "#000000",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
          }
        }
      >
        Notifications
      </Text>
    </View>
    <View>
      <Text />
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderBottomColor": "#7E7E7E",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingHorizontal": 4,
        "width": 750,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View>
        <Text />
      </View>
      <Text
        style={
          {
            "color": "#000000",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
          }
        }
      >
        Privacy Policy
      </Text>
    </View>
    <View>
      <Text />
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderBottomColor": "#7E7E7E",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingHorizontal": 4,
        "width": 750,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View>
        <Text />
      </View>
      <Text
        style={
          {
            "color": "#000000",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
          }
        }
      >
        Ratings
      </Text>
    </View>
    <View>
      <Text />
    </View>
  </View>
  <Text
    style={
      {
        "color": "#000000",
        "fontFamily": "System",
        "fontSize": 12,
        "marginTop": 8,
      }
    }
  >
    Buttons above for testing
  </Text>
</RCTSafeAreaView>
`;
